trying to fix the overflow after clicking the input

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -7,6 +7,8 @@ html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
 }
-body {
-	overflow: hidden;
+html, body{
+	position: relative;
+	max-width: 100%;
+	overflow-x: hidden;
 }
