--- a/sass/mainpage.scss
+++ b/sass/mainpage.scss
@@ -5,7 +5,6 @@
 
 body {
 	position: relative;
-	width: 100%;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
